<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cythara</string>

    <string name="privacy_policy">Show privacy policy</string>
    <string name="privacy_policy_link" translatable="false">
        https://gstraube.github.io/privacy_policy.html
    </string>

    <string name="set_notation">Set notation</string>
    <string name="choose_notation">Choose notation</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="set_reference_pitch">Set reference pitch</string>
    <string name="set_tuning_speed">Set tuning speed</string>

    <string name="choose_speed">Choose tuning speed</string>
    <string name="choose_a_frequency">Choose a frequency:</string>
    <string name="permission_required">Permission required</string>
    <string name="microphone_permission_required">Microphone permission is required. App will close.</string>
    <string name="ok">OK</string>
    <string name="choose_tuning_mode" tools:ignore="MissingTranslation">Choose tuning mode</string>

    <string-array name="tunings">
        <item>Chromatic</item>
        <item>Guitar (standard)</item>
        <item>Guitar (Drop D)</item>
        <item>Guitar (Drop C)</item>
        <item>Guitar (Drop C#)</item>
        <item>Guitar (Open G)</item>
        <item>Bass (standard)</item>
        <item>Bass (Drop C)</item>
        <item>Ukulele (standard)</item>
        <item>Ukulele (D tuning)</item>
        <item>Violin (standard)</item>
        <item>Cello (standard)</item>
        <item>Viola (standard)</item>
        <item>Oud (Turkish standard)</item>
        <item>Banjo (standard)</item>
    </string-array>
    <string-array name="scale">
        <item>No scale</item>
        <item>Cb</item>
        <item>C</item>
        <item>C#</item>
        <item>Db</item>
        <item>D</item>
        <item>D#</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>Gb</item>
        <item>G</item>
        <item>G#</item>
        <item>Ab</item>
        <item>A</item>
        <item>A#</item>
        <item>Bb</item>
        <item>B</item>
    </string-array>

    <string-array name="notations">
        <item name="scientific">Scientific pitch notation</item>
        <item name="sol">Solfège</item>
    </string-array>
</resources>
