<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/set_notation"
        android:title="@string/set_notation"
        app:showAsAction="never" />

    <item
        android:id="@+id/set_reference_pitch"
        android:title="@string/set_reference_pitch"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/toggle_dark_mode"
        android:title="@string/toggle_dark_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/choose_tuning_mode"
        android:title="@string/choose_tuning_mode"
        app:showAsAction="never" />
</menu>